src/includes/_forms.scss
/* ... */
input, textarea, select {
    &::placeholder {
        color: var(--color-text-semi-transparent);
        opacity: 1;
        font-size: inherit;
        font-weight: normal;
    }

    &:read-only:focus {
        background-color: var(--color-header-background);
    }
}
a.button {
    text-decoration: none;
}
input {
    &[type="number"] {
        padding-right: 0;
        width: 4em;
        box-sizing: content-box;
    }

    &[type="checkbox"] {
        padding: 0;
        width: 1.1rem;
        height: 1.1rem;
        cursor: pointer;
        flex: 0 0 auto;

        &:checked {
            background-image: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 -960 960 960' width='24' height='24' fill='%2324292f'><path d='M382-221.912 135.912-468l75.653-75.653L382-373.218l366.435-366.435L824.088-664 382-221.912Z'></path></svg>");
            background-size: 1em;
            background-position: center;
            background-repeat: no-repeat;
        }
    }

    &[type="radio"] {
        padding: 0;
        width: 1.1rem;
        height: 1.1rem;
        border-radius: 50%;
        cursor: pointer;
        flex: 0 0 auto;

        &:checked {
            background-image: radial-gradient(transparent 0%, transparent 30%, var(--color-text-light) 40%);

            &:hover, &:focus {
                background-image: radial-gradient(white 0%, white 30%, var(--color-text-light) 45%);
            }
        }
    }

    &:is([type="text"], [type="search"], [type="email"], [type="password"], [type="tel"], [type="url"]) {
        width: 200px;
        min-width: 12ch;

        &.wide {
            width: 18rem;
        }

        &.full-width {
            width: 100%;
        }
    }

    &[type="color"] {
        padding: 0;
        box-sizing: content-box;
    }

    &[type="range"] {
        appearance: auto; // Needed to get progress color
        padding: 0;
        background-color: transparent !important;
        cursor: pointer;
        border: none;
        box-shadow: none !important;
        color: var(--color-text-light);
        box-sizing: border-box;
        width: 100%;
        accent-color: var(--color-text-light);

        &::-webkit-slider-runnable-track {
            border: var(--border-light);
            border-radius: 3px;
            height: 6px;
        }

        &::-webkit-slider-thumb {
            margin-top: -6px;
            background-color: var(--color-text-light);
            border-radius: 50%;
            border: none;
            height: 16px;
            width: 16px;
        }

        &:focus {
            outline: none;

            &::-webkit-slider-thumb {
                outline: var(--outline-buttons);
                outline-offset: -0.5px;
                box-shadow: var(--box-shadow-medium);
            }
        }

        &:hover {
            &::-webkit-slider-thumb {
                box-shadow: var(--box-shadow-medium);
            }
        }

        & + datalist {
            display: grid;
            grid-auto-flow: column;
            grid-auto-columns: 1fr;
            font-size: .75rem;
            box-sizing: border-box;
            width: 100%; // Same as input
            padding: 0 8px; // Thumb size / 2
            option {
                text-align: center;
                white-space: normal;
                overflow-wrap: anywhere;
                padding: 2px 4px 0 4px;
                grid-column: span 2;

                &:first-child {
                    padding-left: 0;
                    text-align: left;
                    margin-left: -2px;
                    grid-column: span 1;
                }

                &:last-child {
                    padding-right: 0;
                    text-align: right;
                    margin-right: -2px;
                    grid-column: span 1;
                }
            }
        }
    }
    // Fix height and text alignment for iOS
    &[type="date"], &[type="time"], &[type="datetime-local"] {
        min-height: 1.1rem;
        box-sizing: content-box;
        text-align: inherit;
    }
    // Fix min-width for iOS
    &[type="date"] {
        min-width: 13ch;
    }

    &[type="time"] {
        min-width: 6ch;
    }

    &[type="datetime-local"] {
        min-width: 18ch;
    }
}
textarea {
    width: 100%;
    min-height: calc(var(--padding-buttons) + 1rem + var(--padding-buttons));
}
textarea, select {
    scrollbar-width: thin;
    scrollbar-color: var(--scrollbar-foreground) var(--scrollbar-background);

    &::-webkit-scrollbar {
        height: 5px;
        width: 5px;
        border-radius: 2px;
    }

    &::-webkit-scrollbar-thumb {
        background-color: var(--color-scrollbar-foreground);
        border-radius: 2px;
    }

    &::-webkit-scrollbar-track {
        background-color: var(--color-scrollbar-background);
    }
}
button, input[type="submit"], a.button {
    text-align: center;
    width: auto;
    cursor: pointer;
    font-weight: 600;
    font-size: .75rem;
    justify-content: center;
    align-items: center;

    &:hover {
        background-color: var(--color-link-background-hover);
    }

    &:focus {
        background-color: var(--color-link-background-hover);
        border-color: transparent;
        outline: var(--outline-buttons);
        box-shadow: var(--box-shadow-medium);
    }

    &.transparent {
        font-weight: 400;
        background-color: transparent;
    }

    &.right-icon {
        flex-direction: row-reverse;
    }

    &.success {
        background-color: var(--color-success) !important;
        color: white;
    }

    &.error {
        background-color: var(--color-error) !important;
        color: white;
    }

    &.warning {
        background-color: var(--color-warning) !important;
        color: white;
    }

    &.info {
        background-color: var(--color-info) !important;
        color: white;
    }
}
/* ... */

